fix:dark mode

--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -50,7 +50,7 @@ p {
   font-size: 18px;
   font-weight: 300;
   line-height: 1.5;
-  color: #5b5b5b;
+  color: #d3d0d0;
 }
 
 h1,
@@ -532,7 +532,7 @@ strong {
   }
 
   .navbar-collapse {
-    background: #ffffff;
+    /* background: #ffffff; */
     text-align: center;
     padding-bottom: 20px;
   }
